Minor css changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>World Clock</h1>
     <footer>
-        This project was coded by <a href="#" target="_blank">Estera Pietkiewicz</a> </footer>
+        This project was coded by <a href="#" target="_blank">Estera Pietkiewicz</a> with ❤</footer>
     <script src="js/index.js"></script>
 </body>
 
