Added the basic HTML

--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 
 <body>
-    <h1>World Clock</h1>
+    <div class="container">
+        <h1>World Clock</h1>
+        <select>
+            <option value="">Select a city...</option>
+            <option value="">London</option>
+            <option value="">Sydney</option>
+            <option value="">Warsaw</option>
+        </select>
+
+        <div class="city">
+            <h2>Los Angeles</h2>
+            <div class="date">August 15th 2022</div>
+            <div class="time">1:48:15 AM</div>
+        </div>
+        <div class="city">
+
+            <h2>Tokyo</h2>
+            <div class="date">August 15th 2022</div>
+            <div class="time">1:48:15 AM</div>
+        </div>
+    </div>
     <footer>
         This project was coded by <a href="#" target="_blank">Estera Pietkiewicz</a> with ❤</footer>
     <script src="js/index.js"></script>
