Styles the project with CSS

--- a/index.html
+++ b/index.html
@@ -19,19 +19,27 @@
         </select>
 
         <div class="city">
-            <h2>Los Angeles</h2>
-            <div class="date">August 15th 2022</div>
-            <div class="time">1:48:15 AM</div>
+            <div>
+                <h2>Los Angeles</h2>
+                <div class="date">August 15th 2022</div>
+            </div>
+            <div>
+                <div class="time">1:48:15 <small>AM</small></div>
+            </div>
         </div>
         <div class="city">
-
-            <h2>Tokyo</h2>
-            <div class="date">August 15th 2022</div>
-            <div class="time">1:48:15 AM</div>
+            <div>
+                <h2>Paris</h2>
+                <div class="date">August 15th 2022</div>
+            </div>
+            <div>
+                <div class="time">5:48:15 <small>AM</small></div>
+            </div>
         </div>
+
     </div>
     <footer>
-        This project was coded by <a href="#" target="_blank">Estera Pietkiewicz</a> with ❤</footer>
+        This project was coded by <a href="#" target="_blank"><strong>Estera Pietkiewicz</strong></a> with ❤</footer>
     <script src="js/index.js"></script>
 </body>
 
