Replacing cities by timezone name

--- a/index.html
+++ b/index.html
@@ -15,29 +15,31 @@
 <body>
     <div class="container">
         <h1>World Clock</h1>
-        <select>
+        <select id="city">
             <option value="">Select a city...</option>
-            <option value="">London</option>
-            <option value="">Sydney</option>
-            <option value="">Warsaw</option>
+            <option value="Europe/London">London</option>
+            <option value="America/New_York">New York</option>
+            <option value="Pacific/Auckland">Auckland</option>
         </select>
 
-        <div class="city" id="los-angeles">
-            <div>
-                <h2>Los Angeles</h2>
-                <div class="date"></div>
+        <div id="cities">
+            <div class="city" id="los-angeles">
+                <div>
+                    <h2>Los Angeles</h2>
+                    <div class="date"></div>
+                </div>
+                <div>
+                    <div class="time"> </div>
+                </div>
             </div>
-            <div>
-                <div class="time"> </div>
-            </div>
-        </div>
-        <div class="city" id="paris">
-            <div>
-                <h2>Paris</h2>
-                <div class="date"></div>
-            </div>
-            <div>
-                <div class="time"></div>
+            <div class="city" id="paris">
+                <div>
+                    <h2>Paris</h2>
+                    <div class="date"></div>
+                </div>
+                <div>
+                    <div class="time"></div>
+                </div>
             </div>
         </div>
 
