Append functionality (adds to the list)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <option value="">Select a city...</option>
             <option value="Europe/London">London</option>
             <option value="America/New_York">New York</option>
-            <option value="Pacific/Auckland">Auckland</option>
+            <option value="Asia/Tokyo">Tokyo</option>
         </select>
 
         <div id="cities">
