--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
     <div class="container">
-        <h1>World Clock</h1>
+        <h1>
+            World Clock
+        </h1>
         <select id="city">
             <option value="">Select a city...</option>
             <option value="current">My current location</option>
