--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <h1>
-            World Clock
+            🌐 World Clock 🌐
         </h1>
         <select id="city">
             <option value="">Select a city...</option>
