Added link to github

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
     </div>
     <footer>
-        This project was coded by <a href="#" target="_blank"><strong>Estera Pietkiewicz</strong></a> with ❤</footer>
+        This project was coded by <strong>Estera Pietkiewicz</strong> with ❤ and is <a
+            href="https://github.com/latin-bubel/World-clock">open sourced on GitHub</a></footer>
     <script src="js/index.js"></script>
 </body>
 
